# saperly-python

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
saperly/: __init__.py  _client.py  _errors.py  _transforms.py  _types.py  webhooks_verify.py
saperly/resources/: _base.py  audit.py  billing.py  calls.py  compliance.py  consent.py  conversations.py  disclosures.py  keys.py  lines.py  messages.py  settings.py  usage.py  voices.py  webhooks.py
tests/: conftest.py  test_async_client.py  test_audit.py  test_billing.py  test_calls.py  test_client.py  test_compliance.py  test_consent.py  test_conversations.py  test_disclosures.py  test_errors.py  test_keys.py  test_lines.py  test_live_customer_flow.py  test_messages.py  test_retry.py  test_settings.py  test_transforms.py  test_usage.py  test_voices.py  test_webhooks.py  test_webhooks_verify.py
