[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saperly"
version = "0.1.0"
description = "Python SDK for Saperly — the phone carrier for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
async = ["httpx>=0.24"]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "responses>=0.23",
  "respx>=0.20",
  "httpx>=0.24",
  "ruff>=0.4",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
