[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saperly"
version = "0.3.0"
description = "Python SDK for Saperly — the phone carrier for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
async = ["httpx>=0.24"]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
  "responses>=0.23",
  "respx>=0.20",
  "httpx>=0.24",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://saperly.com"
Repository = "https://github.com/Saperly/saperly-python"
Documentation = "https://docs.saperly.com"
Issues = "https://github.com/Saperly/saperly-python/issues"
Changelog = "https://docs.saperly.com/changelog/2026-05-13-agent-native-key-management"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
